Fixed footer and aligned statistics with Mission statement

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -34,20 +34,6 @@
 	margin-top: 15px;
 }
 
-.footer {
-    text-align: center;
-    padding: 30px 0;
-    margin-top: 60px;
-
-    bottom:0;
-    width:100%;
-    display: block;
-    vertical-align: center;
-    position: absolute;
-    /* Set the fixed height of the footer here */
-    height: 30px;
-}
-
 html {
   position: relative;
   min-height: 100%;
@@ -56,4 +42,8 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 90px;
+}
+
+.statistics {
+  margin-top: 20px;
 }
