--- a/client/components/footer/footer.less
+++ b/client/components/footer/footer.less
@@ -1,9 +1,9 @@
 .footer {
-  background-color: @navigation-background;
-  color: @navigation-link;
+  color: @navigation-secondary-background;
 
   text-align: center;
-  padding: 30px 0;
+  padding-top: 20px;
+  padding-bottom: 40px;
   margin-top: 40px;
 
   bottom: 0;
@@ -14,8 +14,10 @@
   /* Set the fixed height of the footer here */
   height: 30px;
 
+  border-top: 1px solid #e5e5e5;
+
   a {
-    color: @navigation-link;
-    text-decoration: underline;
+    //color: @navigation-link;
+    //text-decoration: underline;
   }
 }
